force-app/main/default/objects/Retail_Order_History_Data__c/Retail_Order_History_Data__c.object-meta.xml
<CustomObject>
    <label>Retail Order History Data</label>
    <nameField>
        <displayFormat>ROHD-{0000}</displayFormat>
        <label>Retail Order History Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Order History Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>