force-app/main/default/objects/Retail_Order_History_Data__c/fields/Date_Time_of_change__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_change__c</fullName>
    <label>Date-Time of change</label>
    <type>DateTime</type>
</CustomField>