force-app/main/default/objects/Retail_Order_History_Data__c/fields/Order_history_tracker__c.field-meta.xml
<CustomField>
    <fullName>Order_history_tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order history tracker</label>
    <referenceTo>Retail_Order_History_Tracker__c</referenceTo>
    <relationshipLabel>Retail Order History Data</relationshipLabel>
    <relationshipName>Retail_Order_History_Data</relationshipName>
    <type>Lookup</type>
</CustomField>