force-app/main/default/objects/Retail_Order_History_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_history_tracker__c</columns>
    <columns>Previous_Status__c</columns>
    <columns>New_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>